@@ -11,11 +11,14 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.io.PrintWriter;
+import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -32,28 +35,40 @@ public class JwtFilter extends OncePerRequestFilter {
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
 
-        String accessToken = request.getHeader("Authorization");
-
-        if (accessToken == null || !accessToken.startsWith("Bearer ")) {
+        String requestUri = request.getRequestURI();
+        if (isPublicPath(requestUri)) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        accessToken = accessToken.substring(7);
-        try {
-            jwtUtil.isExpired(accessToken);
-        } catch (ExpiredJwtException e) {
+        String accessToken = request.getHeader("Authorization");
+
+        if (accessToken == null || !accessToken.startsWith("Bearer ")) {
             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-            response.getWriter().print("access token expired");
             return;
         }
-        String userEmail = jwtUtil.getUserEmail(accessToken);
-        String role = jwtUtil.getRole(accessToken);
 
-        UserPersonalInfo userPersonalInfo = new UserPersonalInfo();
-        userPersonalInfo.setEmail(userEmail);
+        //accessToken = accessToken.substring(7);
+        String token = accessToken.substring(7);
+        try {
+            jwtUtil.isExpired(token);
+        } catch (ExpiredJwtException e) {
+            PrintWriter writer = response.getWriter();
+            writer.print("access token expired");
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            return;
+        }
+        String email = jwtUtil.getUserEmail(token);
+        String role = jwtUtil.getRole(token);
 
-        Authentication authToken = new UsernamePasswordAuthenticationToken(userPersonalInfo, null, List.of());
+        UserPersonalInfo user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
+
+        Authentication authToken = new UsernamePasswordAuthenticationToken(
+                user, // Principal 객체로 DB에서 조회한 user 엔티티 사용
+                null,
+                Collections.singletonList(new SimpleGrantedAuthority(role))
+        );
 
         SecurityContextHolder.getContext().setAuthentication(authToken);
         filterChain.doFilter(request, response);
@@ -68,8 +83,15 @@ public class JwtFilter extends OncePerRequestFilter {
         */
 
 
+
+
     }
 
-
+    private boolean isPublicPath(String uri) {
+        return uri.matches("^/api/v1/users/login$") ||
+                uri.matches("^/api/v1/users/signup$") ||
+                uri.matches("^/reissue$") ||
+                uri.matches("^(/swagger-ui|/v3/api-docs|/swagger-resources|/webjars).*$");
+    }
 
 }
